0x05-pointers_arrays_strings/error:
n.c:16:5: error: expected declaration or statement at end of input
   16 |     return (0)
      |     ^~~~~~
